src/backends/libinput/connection.cpp
@@ -380,6 +380,10 @@ void Connection::processEvents()
 #ifndef KWIN_BUILD_TESTING
             TouchEvent *te = static_cast<TouchEvent *>(event.get());
             const auto *output = te->device()->output();
+            if (!output) {
+                qCWarning(KWIN_LIBINPUT) << "Touch down received for device with no output assigned";
+                break;
+            }
             const QPointF globalPos = devicePointToGlobalPosition(te->absolutePos(output->modeSize()), output);
             Q_EMIT te->device()->touchDown(te->id(), globalPos, te->time(), te->device());
             break;
@@ -387,6 +391,10 @@ void Connection::processEvents()
         }
         case LIBINPUT_EVENT_TOUCH_UP: {
             TouchEvent *te = static_cast<TouchEvent *>(event.get());
+            const auto *output = te->device()->output();
+            if (!output) {
+                break;
+            }
             Q_EMIT te->device()->touchUp(te->id(), te->time(), te->device());
             break;
         }
@@ -394,6 +402,9 @@ void Connection::processEvents()
 #ifndef KWIN_BUILD_TESTING
             TouchEvent *te = static_cast<TouchEvent *>(event.get());
             const auto *output = te->device()->output();
+            if (!output) {
+                break;
+            }
             const QPointF globalPos = devicePointToGlobalPosition(te->absolutePos(output->modeSize()), output);
             Q_EMIT te->device()->touchMotion(te->id(), globalPos, te->time(), te->device());
             break;
